force-app/main/default/objects/Comment__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self Lookup qui représente les réponses.</description>
    <label>Comment</label>
    <referenceTo>Comment__c</referenceTo>
    <relationshipLabel>Comments</relationshipLabel>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>