force-app/main/default/objects/Comment__c/fields/IsBestAnswer__c.field-meta.xml
<CustomField>
    <fullName>IsBestAnswer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsBestAnswer</label>
    <type>Checkbox</type>
</CustomField>