force-app/main/default/objects/Comment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type du feedBack : Commentaire ou réponse.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>